--- a/bin/phpdocker/README.html
+++ b/bin/phpdocker/README.html
@@ -52,11 +52,11 @@
 <tbody>
 <tr>
   <td>Webserver</td>
-  <td><a href="http://localhost:7575">localhost:7575</a></td>
+  <td><a href="http://localhost:7676">localhost:7676</a></td>
 </tr>
 <tr>
   <td>MySQL</td>
-  <td><strong>host:</strong> <code>localhost</code>; <strong>port:</strong> <code>7577</code></td>
+  <td><strong>host:</strong> <code>localhost</code>; <strong>port:</strong> <code>7678</code></td>
 </tr>
 </tbody>
 </table>
@@ -113,6 +113,12 @@
     * Open a mysql shell, <code>docker-compose exec mysql mysql -uroot -pCHOSEN_ROOT_PASSWORD</code></li>
 </ul>
 
+<h1>Application file permissions</h1>
+
+<p>As in all server environments, your application needs the correct file permissions to work proberly. You can change the files throught the container, so you won't care if the user exists or has the same ID on your host.</p>
+
+<p><code>docker-compose exec php-fpm chown -R www-data:www-data /application/public</code></p>
+
 <h1>Recommendations</h1>
 
 <p>It's hard to avoid file permission issues when fiddling about with containers due to the fact that, from your OS point of view, any files created within the container are owned by the process that runs the docker engine (this is usually root). Different OS will also have different problems, for instance you can run stuff in containers using <code>docker exec -it -u $(id -u):$(id -g) CONTAINER_NAME COMMAND</code> to force your current user ID into the process, but this will only work if your host OS is Linux, not mac. Follow a couple of simple rules and save yourself a world of hurt.</p>
@@ -120,6 +126,41 @@
 <ul>
 <li>Run composer outside of the php container, as doing so would install all your dependencies owned by <code>root</code> within your vendor folder.</li>
 <li>Run commands (ie Symfony's console, or Laravel's artisan) straight inside of your container. You can easily open a shell as described above and do your thing from there.</li>
+</ul>
+
+<h1>Simple basic Xdebug configuration with integration to PHPStorm</h1>
+
+<h2>To config xdebug you need add these lines in php-fpm/php-ini-overrides.ini:</h2>
+
+<h3>For linux:</h3>
+
+<pre><code>xdebug.remote_enable=1
+xdebug.remote_connect_back=1
+xdebug.remote_autostart = 1
+</code></pre>
+
+<h3>For MacOS and Windows:</h3>
+
+<pre><code>xdebug.remote_enable=1
+xdebug.remote_host=host.docker.internal
+xdebug.remote_autostart = 1
+</code></pre>
+
+<h2>Add the section “environment” to the php-fpm service in docker-compose.yml:</h2>
+
+<p>environment:</p>
+
+<p>PHP_IDE_CONFIG: "serverName=Docker"</p>
+
+<h3>Create a server configuration in PHPStorm:</h3>
+
+<ul>
+<li>In PHPStorm open Preferences | Languages &amp; Frameworks | PHP | Servers</li>
+<li>Add new server</li>
+<li>The “Name” field should be the same as the parameter “serverName” in “environment” in docker-compose.yml</li>
+<li>A value of the "port" field should be the same as first port(before a colon) in "webserver" service in docker-compose.yml</li>
+<li>Select "Use path mappings" and set mappings between a path to your project on a host system and the Docker container.</li>
+<li>Finally, add “Xdebug helper” extension in your browser, set breakpoints and start debugging</li>
 </ul>
     </div>
     <div class="pure-u-1-24"></div>
